[project]
name = "streamlit-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=16.1.0",
    "python-dotenv>=1.0.0",
    "groq>=1.1.1",
    "numpy>=2.2.0",
    "requests>=2.31.0",
    "streamlit>=1.45.0",
    "streamlit-webrtc>=0.47.0",
    "watchdog>=6.0.0",
]
